# unifi-video-metrics-collector

./: .gitignore  README.md  pyproject.toml
camerametrics/: main.py
camerametrics/utils/: config.py  constants.py
tests/: responses.py  test_config.py  test_main.py
